[package]
name = "canister-tools"
version = "0.2.0"
edition = "2021"
authors = ["Levi Feldman <levifeldman37@gmail.com>"]
description = "Tools for the canisters on the internet-computer, featuring simple upgrades and data safety state snapshot upload/download features."
readme = "README.md"
repository = "https://github.com/levifeldman/canister-tools"
license-file = "LICENSE.txt"
keywords = ["internet-computer", "canister", "upgrade", "tools", "data-management"]
categories = ["cryptography::cryptocurrencies", "data-structures", "memory-management", "rust-patterns", "wasm"]



[dependencies]
ic-cdk = "0.10.0"
ic-stable-structures = "0.5.4"
serde = "1.0.193"
serde_bytes = "0.11.9"
candid = "0.9.11"

